==> ignaworn/ADE7753/src/ADE7753.cpp <==
#include "string.h"
#include "ADE7753.h"
#include "driver/gpio.h"
#include "driver/spi_master.h"
#include "esp_system.h"

void ADE7753::closeSPI(void) {
    // Error handler for esp callbacks
    esp_err_t ret;

    // Remove the ADE7753 from the SPI bus
    ret = spi_bus_remove_device(_SPI);
    /**
     *         - ESP_ERR_INVALID_ARG   if parameter is invalid
     *         - ESP_ERR_INVALID_STATE if device already is freed
     *         - ESP_OK                on success
     */
    ESP_ERROR_CHECK(ret);

    // SPI.setDataMode(SPI_MODE0); // TODO: No_arduino
    ets_delay_us(10);  // TODO: Check this delay. Is it necessary?

    // TODO: Separate methods to dettach spi device and remove SPI bus.
}

esp_err_t ADE7753::enableChip() {
    // Set Chip Select on LOW to enable the ADE7753
    // TODO: Check if this is correct
    return gpio_set_level(_CS, 0);
}

esp_err_t ADE7753::disableChip() {
    // Set Chip Select on HIGH to disable the ADE7753
    // TODO: Check if this is correct
    return gpio_set_level(_CS, 1);
}

uint8_t ADE7753::read8(uint8_t reg) {
    // Mask the register for a read operation
    reg &= ~(0x01 << 7);

    // Clear the reserved bit
    reg &= ~(0x01 << 6);

    // Enable ADE7753 communication mode
    enableChip();

    // Send the read command
    transaction(8, &reg, NULL);

    // Wait at least 4us after a write operation (write to comm register) to
    // ensure propper operation.
    ets_delay_us(5);

    // Receive data
    uint8_t data;
    transaction(8, NULL, &data);

    // Disable ADE7753 communication mode
    disableChip();

    // Return the received data
    return data;
}

uint16_t ADE7753::read16(uint8_t reg) {
    // Mask the register for a read operation
    reg &= ~(0x01 << 7);

    // Clear the reserved bit
    reg &= ~(0x01 << 6);

    // Enable ADE7753 communication mode
    enableChip();

    // Send the read command
    transaction(8, &reg, NULL);
    
    // Wait at least 4us after a write operation (write to comm register) to ensure propper operation.
    ets_delay_us(5);

    // Receive MSB byte of data
    uint16_t data;
    transaction(16, NULL, &data);

    // Shift data
    data = (data >> 8) | (data << 8);

    // Disable ADE7753 communication mode
    disableChip();

    // Return the received data
    return data;
}

uint32_t ADE7753::read24(uint8_t reg) {
    // Mask the register for a read operation
    reg &= ~(0x01 << 7);

    // Clear the reserved bit
    reg &= ~(0x01 << 6);

    // Enable ADE7753 communication mode
    enableChip();

    // Send the read command
    transaction(8, &reg, NULL);
        
    // Wait at least 4us after a write operation (write to comm register) to ensure propper operation.
    ets_delay_us(5);

    // Receive MSB byte of data
    uint32_t data;
    transaction(24, NULL, &data);

    // Disable ADE7753 communication mode
    disableChip();

    // Return the received data
    return data;
}

esp_err_t ADE7753::write8(uint8_t reg, uint8_t data) {
    // Error handler
    esp_err_t ret;

    // Mask the register for a write operation
    reg |= (0x01 << 7);

    // Clear the reserved bit
    reg &= ~(0x01 << 6);

    // Code the message.
    uint32_t _data = (reg << 0) | (data << 8);

    // Enable ADE7753 communication mode
    ret = enableChip();

    // Send the message
    ret = transaction(16, &_data, NULL);

    // Disable ADE7753 communication mode
    ret = disableChip();

    return ret;
}

esp_err_t ADE7753::write16(uint8_t reg, uint16_t data) {
    // Error handler
    esp_err_t ret;

    // Mask the register for a write operation
    reg |= (0x01 << 7);

    // Clear the reserved bit
    reg &= ~(0x01 << 6);

    // Shift data
    data = (data << 8) | (data >> 8);

    // Code the message.
    uint32_t _data = (reg << 0) | (data << 8);
    
    // Enable ADE7753 communication mode
    ret = enableChip();

    // Send the message
    ret = transaction(24, &_data, NULL);

    // Disable ADE7753 communication mode
    ret = disableChip();

    return ret;
}

uint8_t ADE7753::setPotLine(uint16_t cycle) {
    // int64_t lastupdate = 0;
    // uint8_t t_of = 0;

    setMode(getMode() | DISCF_BIT | DISSAG_BIT | CYCMODE_BIT);
    setInterrupt(getInterrupt() | CYCEND_BIT);
    setLineCyc(cycle);
    // getResetStatus();
    // lastupdate = esp_timer_get_time();
    // // wait to terminar de acumular
    // while( !(getStatus() & CYCEND_BIT) ) { // wait for the selected interrupt
    // to occur
    //     if ((esp_timer_get_time() - lastupdate) > (cycle*20)) {
    //         t_of = 1;
    //         break;
    //     }
    // }
    // if(t_of) {
    //     return 0;
    // }
    // getResetStatus();
    // lastupdate = esp_timer_get_time();
    // // wait to terminar de acumular
    // while(!(getStatus() & CYCEND_BIT)) { // wait for the selected interrupt
    // to occur 	if ((esp_timer_get_time() - lastupdate) > (cycle*20)) { 	    t_of =
    // 1; 	    break;
    // 	}
    // }
    // if(t_of) {

    //     return 0;
    // }
    // else{
    //     return 1;
    // }
    return 0;
}
