==> TriLe14/Design-an-IOT-system-to-monitor-household-water-and-energy-consumption./Firmware/NODE_ENERGY/lib/ADE7753/ADE7753.cpp <==
#include "ADE7753.h"
#include <string.h>
#include <Arduino.h>
#include <SPI.h>

void ADE7753::closeSPI(void) {
	SPI.setDataMode(SPI_MODE0);
	delay(10);
}

void ADE7753::enableChip(void){
  digitalWrite(_AFECS,LOW);
}

void ADE7753::disableChip(void){
  digitalWrite(_AFECS,HIGH);
}

uint8_t ADE7753::read8(uint8_t reg){
    enableChip();
	SPI.beginTransaction(SPISettings(_spiFreq, MSBFIRST, SPI_MODE2));
    uint8_t b0;
    delayMicroseconds(5);
    SPI.transfer(reg);
    delayMicroseconds(5);
    b0 = SPI.transfer(0x00);
    SPI.endTransaction();
    disableChip();
    return b0;

}

uint16_t ADE7753::read16(uint8_t reg){
    enableChip();
    	SPI.beginTransaction(SPISettings(_spiFreq, MSBFIRST, SPI_MODE2));
    uint8_t b1,b0;
    delayMicroseconds(5);
    SPI.transfer(reg);
    delayMicroseconds(5);
    b1=SPI.transfer(0x00);
    delayMicroseconds(5);
    b0=SPI.transfer(0x00);
    SPI.endTransaction();
    disableChip();
    return (uint16_t)b1<<8 | (uint16_t)b0;

}

uint32_t ADE7753::read24(uint8_t reg){
    enableChip();
    	SPI.beginTransaction(SPISettings(_spiFreq, MSBFIRST, SPI_MODE2));
    uint8_t b2,b1,b0;
    delayMicroseconds(10);
    SPI.transfer(reg);
    delayMicroseconds(25);
    b2=SPI.transfer(0x00);
    delayMicroseconds(5);
    b1=SPI.transfer(0x00);
    delayMicroseconds(5);
    b0=SPI.transfer(0x00);
    SPI.endTransaction();
    disableChip();
    return (uint32_t)b2<<16 | (uint32_t)b1<<8 | (uint32_t)b0;

}

void ADE7753::write8(uint8_t reg, uint8_t data){
    enableChip();
    	SPI.beginTransaction(SPISettings(_spiFreq, MSBFIRST, SPI_MODE2));
    //we have to send a 1 on the 8th bit in order to perform a write
    reg |= WRITE;
    delayMicroseconds(10);
    SPI.transfer((uint8_t)reg);          //register selection
    delayMicroseconds(5);
    SPI.transfer((uint8_t)data);
    delayMicroseconds(5);
    SPI.endTransaction();
    disableChip();
}

void ADE7753::write16(uint8_t reg, uint16_t data){
    enableChip();
    	SPI.beginTransaction(SPISettings(_spiFreq, MSBFIRST, SPI_MODE2));
    uint8_t data0=0,data1=0;
    reg |= WRITE;
    //split data
    data0 = (uint8_t)data;
    data1 = (uint8_t)(data>>8);

    //register selection, we have to send a 1 on the 8th bit to perform a write
    delayMicroseconds(10);
    SPI.transfer((uint8_t)reg);
    delayMicroseconds(5);
    //data send, MSB first
    SPI.transfer((uint8_t)data1);
    delayMicroseconds(5);
    SPI.transfer((uint8_t)data0);
    delayMicroseconds(5);
    SPI.endTransaction();
    disableChip();
}

uint8_t ADE7753::setPotLine(uint16_t Ciclos){
uint32_t lastupdate = 0;
uint8_t t_of = 0;
uint16_t m = 0;
m = m | DISCF | DISSAG | CYCMODE;
setMode(m);
resetStatus();
setLineCyc(Ciclos);
lastupdate = millis();
while(!(getStatus() & CYCEND))   // wait to terminar de acumular
	{ // wait for the selected interrupt to occur
		if ((millis() - lastupdate) > (Ciclos*20))
		{
		t_of = 1;
		break;
		}
	}
if(t_of){
	return 0;
}
resetStatus();
lastupdate = millis();
while(!(getStatus() & CYCEND))   // wait to terminar de acumular
	{ // wait for the selected interrupt to occur
		if ((millis() - lastupdate) > (Ciclos*20))
		{
		t_of = 1;
		break;
		}
	}
	if(t_of){
	return 0;
	}else{
	return 1;
	}
}
